service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: hpa
spec: 
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
